put and single get methods (put has error)
